correct svh on mobiles and background menu

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -58,6 +58,7 @@ h1.centeredText {
 @media (max-width: 800px) {
     .header .bottom-shape {
         height: 100px;
+        bottom: 40px;
     }
 }
 
