--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -184,7 +184,7 @@ nav li {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("../img/backimg.jpg");
+    background-image: url("../img/background_image.jpeg");
 }
 
 .mobileMenu .mobileMenu_li li {
