--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ nav li {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-image: url("../img/backimg.jpg");
+  background-image: url("../img/background_image.jpeg");
 }
 
 .mobileMenu .mobileMenu_li li {
@@ -421,6 +421,7 @@ h1.centeredText {
 @media (max-width: 800px) {
   .header .bottom-shape {
     height: 100px;
+    bottom: 40px;
   }
 }
 
